--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,21 +1,26 @@
-#AddType application/json .json
-RewriteEngine On    # Turn on the rewriting engine
+# For help, checkout this page https://gist.github.com/ScottPhillips/1721489
 
-#static redirects
+# add html to pages like /join so it goes to /join.html
+RewriteEngine On
+RewriteCond %{REQUEST_URI} !^.*\.html$
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ %{REQUEST_FILENAME}.html
+
+# static redirects
 RedirectMatch 301 /video/chairmans2017(.*) https://youtu.be/28CTq6Mhg_Y/$1
 RedirectMatch 301 /summercamp2017 https://goo.gl/forms/PbkqjHWnyX2Rh2832
 RedirectMatch 301 /SummerCamp2017 https://goo.gl/forms/PbkqjHWnyX2Rh2832
+Redirect 301 /signup.html /emailform
 
-#page rewrites
-RewriteCond %{SCRIPT_FILENAME} !-d
-RewriteCond %{SCRIPT_FILENAME} !-f
-RewriteRule ^.*$ ./index.php
+# Handle Errors
+ErrorDocument 404 /index.html
+ErrorDocument 500 /index.html
 
 
-
+# cache stuff
 ExpiresActive On
 ExpiresByType image/gif A2592000
 ExpiresByType image/png A2592000
 ExpiresByType image/jpeg A2592000
-
 ExpiresDefault M604800
