--- a/www/.htaccess
+++ b/www/.htaccess
@@ -12,6 +12,7 @@ RedirectMatch 301 /video/chairmans2017(.*) https://youtu.be/28CTq6Mhg_Y/$1
 RedirectMatch 301 /summercamp2017 https://goo.gl/forms/PbkqjHWnyX2Rh2832
 RedirectMatch 301 /SummerCamp2017 https://goo.gl/forms/PbkqjHWnyX2Rh2832
 RedirectMatch 301 /slack https://metalcowrobotics.slack.com
+RedirectMatch 301 /calendar https://calendar.google.com/calendar/embed?src=teammetalcow%40gmail.com&ctz=America%2FChicago
 
 Redirect 301 /signup.html /emailform
 
